syntax = "proto3";

option java_multiple_files = true;
option java_package = "tarea3";
option java_outer_classname = "RequerimientosProto";
option objc_class_prefix = "SD";

package tarea3;

import "google/protobuf/empty.proto";

message Empl{ //empleado
	int32 id = 1;
	string cargo = 2;
}

message SolicitarMsg{
	int32 id_requerimiento = 1;
	int32 id_paciente = 2;
	int32 hospital = 3; //id_hospital
	Empl empleado = 4;
}

// status: 1 = acceso permitido; 2 = en queue; 3 = acceso denegado
message SolicitudOk{
	int32 status = 1;
	int32 id_requerimiento = 2;
	int32 hospital = 3;
}

message RequerimientoMsg {
	int32 id_requerimiento = 1;
	int32 hospital = 2;
	int32 id_paciente = 3;
	string req_data = 4;
	Empl empleado = 5;
}

// status: 1 = cambio realizado; 2 = acceso denegado
message RequerimientoOk{
	int32 id_requerimiento = 1;
	int32 status = 2;
}


service ReqCoordinacion {
	rpc SolicitarFicha(SolicitarMsg) returns (SolicitudOk) {}
	rpc PermiteAcceso(SolicitudOk) returns (google.protobuf.Empty) {}
	rpc ModificaPaciente(RequerimientoMsg) returns (RequerimientoOk) {}
} 
